Add client and contact REST APIs