@@ -1,7 +1,8 @@
 package ma.agilisys.devis.services.impl;
 
-import ma.agilisys.devis.dtos.ContactDto;
-import ma.agilisys.devis.dtos.ContactRequest;
+import lombok.RequiredArgsConstructor;
+import ma.agilisys.devis.dtos.ContactRequestDto;
+import ma.agilisys.devis.dtos.ContactResponseDto;
 import ma.agilisys.devis.exceptions.ResourceNotFoundException;
 import ma.agilisys.devis.mappers.ContactMapper;
 import ma.agilisys.devis.models.Client;
@@ -13,44 +14,22 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
+@RequiredArgsConstructor
 public class ContactServiceImpl implements ContactService {
-
     private final ContactRepository contactRepository;
     private final ClientRepository clientRepository;
     private final ContactMapper contactMapper;
 
-    public ContactServiceImpl(ContactRepository contactRepository,
-                              ClientRepository clientRepository,
-                              ContactMapper contactMapper) {
-        this.contactRepository = contactRepository;
-        this.clientRepository = clientRepository;
-        this.contactMapper = contactMapper;
-    }
 
     @Override
-    public List<ContactDto> getAllContacts() {
-        return contactRepository.findAll().stream()
-                .map(contactMapper::toDto)
-                .collect(Collectors.toList());
-    }
+    public ContactResponseDto createContact(ContactRequestDto contactRequestDto) {
+        Client client = clientRepository.findById(contactRequestDto.getClientId())
+                .orElseThrow(() -> new ResourceNotFoundException("Client not found with id: " + contactRequestDto.getClientId()));
 
-    @Override
-    public ContactDto getContactById(Long id) {
-        Contact contact = contactRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Contact not found with id: " + id));
-        return contactMapper.toDto(contact);
-    }
-
-    @Override
-    public ContactDto createContact(ContactRequest contactRequest) {
-        Client client = clientRepository.findById(contactRequest.getClientId())
-                .orElseThrow(() -> new ResourceNotFoundException("Client not found with id: " + contactRequest.getClientId()));
-
-        Contact contact = contactMapper.toEntity(contactRequest);
+        Contact contact = contactMapper.toEntity(contactRequestDto);
         contact.setClient(client);
 
         Contact savedContact = contactRepository.save(contact);
@@ -58,33 +37,9 @@ public class ContactServiceImpl implements ContactService {
     }
 
     @Override
-    public ContactDto updateContact(Long id, ContactRequest contactRequest) {
-        Contact existingContact = contactRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Contact not found with id: " + id));
-
-        Client client = clientRepository.findById(contactRequest.getClientId())
-                .orElseThrow(() -> new ResourceNotFoundException("Client not found with id: " + contactRequest.getClientId()));
-
-        existingContact.setEmail(contactRequest.getEmail());
-        existingContact.setTelephone(contactRequest.getTelephone());
-        existingContact.setFax(contactRequest.getFax());
-        existingContact.setClient(client);
-
-        Contact updatedContact = contactRepository.save(existingContact);
-        return contactMapper.toDto(updatedContact);
-    }
-
-    @Override
-    public void deleteContact(Long id) {
-        Contact contact = contactRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Contact not found with id: " + id));
-        contactRepository.delete(contact);
-    }
-
-    @Override
-    public List<ContactDto> getContactsByClient(Long clientId) {
+    public List<ContactResponseDto> getContactsByClient(Long clientId) {
         return contactRepository.findByClientId(clientId).stream()
                 .map(contactMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
